--- a/WebApp/Views/Layout/AdminLayout.cshtml
+++ b/WebApp/Views/Layout/AdminLayout.cshtml
@@ -19,11 +19,17 @@
     <link href="~/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/font-awesome/css/font-awesome.css" rel="stylesheet">
 
+    <link href="~/css/plugins/summernote/summernote-bs4.css" rel="stylesheet">
+    <link href="~/css/plugins/datapicker/datepicker3.css" rel="stylesheet">
+
     <!-- Toastr style -->
     <link href="~/css/plugins/toastr/toastr.min.css" rel="stylesheet">
 
     <!-- Gritter -->
     <link href="~/js/plugins/gritter/jquery.gritter.css" rel="stylesheet">
+
+    <!-- FooTable -->
+    <link href="~/css/plugins/footable/footable.core.css" rel="stylesheet">
 
     <link href="~/css/animate.css" rel="stylesheet">
     <link href="~/css/style.css" rel="stylesheet">
@@ -66,15 +72,10 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="~/#"><i class="fa fa-shopping-cart"></i> <span class="nav-label">Quản Lý Sản Phẩm</span><span class="fa arrow"></span></a>
+                        <a href="@Url.Action("Index","Product")"><i class="fa fa-shopping-cart"></i> <span class="nav-label">Quản Lý Sản Phẩm</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
-                            <li><a href="~/ecommerce_products_grid.html">Products grid</a></li>
-                            <li><a href="~/ecommerce_product_list.html">Products list</a></li>
-                            <li><a href="~/ecommerce_product.html">Product edit</a></li>
-                            <li><a href="~/ecommerce_product_detail.html">Product detail</a></li>
-                            <li><a href="~/ecommerce-cart.html">Cart</a></li>
-                            <li><a href="~/ecommerce-orders.html">Orders</a></li>
-                            <li><a href="~/ecommerce_payments.html">Credit Card form</a></li>
+                            <li><a href="@Url.Action("Index","Product")">Danh sách sản phẩm</a></li>
+                            <li><a href="@Url.Action("Create","Product")">Thêm sản phẩm</a></li>
                         </ul>
                     </li>
                     <li>
@@ -918,7 +919,30 @@
     <!-- Toastr -->
     <script src="~/js/plugins/toastr/toastr.min.js"></script>
 
+    <!-- FooTable -->
+    <script src="~/js/plugins/footable/footable.all.min.js"></script>
 
+    <!-- SUMMERNOTE -->
+    <script src="~/js/plugins/summernote/summernote-bs4.js"></script>
+
+    <!-- Data picker -->
+    <script src="~/js/plugins/datapicker/bootstrap-datepicker.js"></script>
+
+    <script>
+        $(document).ready(function () {
+
+            $('.summernote').summernote();
+
+            $('.input-group.date').datepicker({
+                todayBtn: "linked",
+                keyboardNavigation: false,
+                forceParse: false,
+                calendarWeeks: true,
+                autoclose: true
+            });
+
+        });
+    </script>
     <script>
         $(document).ready(function () {
             setTimeout(function () {
