--- a/WebApp/Views/Product/Index.cshtml
+++ b/WebApp/Views/Product/Index.cshtml
@@ -20,13 +20,13 @@
             <div class="col-sm-2">
                 <div class="form-group">
                     <label class="col-form-label" for="price">Giá</label>
-                    <input type="text" id="price" name="price" value="" placeholder="Price" class="form-control">
+                    <input type="number" id="price" name="price" value="" placeholder="Price" class="form-control">
                 </div>
             </div>
             <div class="col-sm-2">
                 <div class="form-group">
                     <label class="col-form-label" for="quantity">Số lượng</label>
-                    <input type="text" id="quantity" name="quantity" value="" placeholder="Quantity" class="form-control">
+                    <input type="number" id="quantity" name="quantity" value="" placeholder="Quantity" class="form-control">
                 </div>
             </div>
             <div class="col-sm-4">
@@ -54,51 +54,47 @@
                                 <th data-toggle="true">Tên</th>
                                 <th data-toggle="phone">Hình ảnh</th>
                                 <th data-hide="all">Mô tả</th>
-                                <th data-toggle="phone,tablet">Số lượng</th>
+                                <th data-toggle="phone">Số lượng</th>
                                 <th data-toggle="phone">Đơn giá</th>
-                                <th data-hide="phone,tablet">Đơn vị tính</th>
-
-                                <th class="text-right" data-sort-ignore="true">Chọn</th>
+                                <th data-hide="phone">Đơn vị tính</th>
+                                <th data-hide="phone">Chọn</th>
 
                             </tr>
                         </thead>
                         <tbody>
                             @foreach (var item in Model.data)
                             {
-                            <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.name)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.picture)
-                                </td>
-                                <td>
-                                    Mô tả
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.amount)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.unit)
-                                </td>
-                                <td>
-                                    <span class="label label-primary">Enable</span>
-                                </td>
-                                <td>
-                                    @Html.ActionLink("Sửa", "Edit", new { id = item.id }, new { @class = "btn btn-success" })
-                                </td>
-                                <td>
-                                    @Html.ActionLink("Xóa", "Delete", new { id = item.id }, new { @class = "btn btn-danger" })
-                                </td>
-                                
-                            </tr>
+                                <tr>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.name)
+                                    </td>
+                                    <td>
+                                        <img src="@Html.DisplayFor(modelItem => item.photo)" height="65px" ; width="65px" />
+                                    </td>
+                                    <td>
+                                        Mô tả
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.amount)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.price)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.unit)
+                                    </td>
+                                    <td>
+                                        @Html.ActionLink("Chi tiết", "Delete", new { id = item.id }, new { @class = "btn btn-primary" })
+                                    </td>
 
-                             }
+                                </tr>
 
-                            </tbody>
+                            }
+
+                        </tbody>
                         <tfoot>
                             <tr>
-                                <td colspan="6">
+                                <td colspan="6" class="footable-visible">
                                     <ul class="pagination float-right"></ul>
                                 </td>
                             </tr>
