--- a/WebApp/Views/Product/Update.cshtml
+++ b/WebApp/Views/Product/Update.cshtml
@@ -1,8 +1,8 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using ViewModel.User
-@model NhanVienVm
+@using ViewModel.Product
+@model ProductVm
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Update";
     Layout = "~/Views/Layout/AdminLayout.cshtml";
 }
 
@@ -32,32 +32,39 @@
                 </div>
             </div>
             <div class="ibox-content">
-                <form method="post" asp-action="Edit">
+                <form method="post" asp-action="Update">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-group  row">
-                        <label class="col-sm-2 col-form-label">Họ tên</label>
+                        <label class="col-sm-2 col-form-label">Tên sản phẩm</label>
 
                         <div class="col-sm-10"><input asp-for="name" type="text" class="form-control"></div>
                     </div>
                     <div class="hr-line-dashed"></div>
 
                     <div class="form-group row">
-                        <label class="col-sm-2 col-form-label">Email</label>
+                        <label class="col-sm-2 col-form-label">Giá</label>
 
-                        <div class="col-sm-10"><input  type="email" class="form-control" asp-for="email"></div>
+                        <div class="col-sm-10"><input type="number" class="form-control" asp-for="price"></div>
                     </div>
                     <div class="hr-line-dashed"></div>
-                    
-                    <div class="form-group row">
-                        <label class="col-sm-2 col-form-label">Số điện thoại</label>
 
-                        <div class="col-sm-10"><input type="text" class="form-control"asp-for="phone"></div>
+                    <div class="form-group row">
+                        <label class="col-sm-2 col-form-label">Hình Ảnh</label>
+
+                        <div class="col-sm-10"><input type="text" class="form-control" asp-for="photo"></div>
                     </div>
                     <div class="hr-line-dashed"></div>
                     <div class="form-group row">
-                        <label class="col-sm-2 col-form-label">Địa chỉ</label>
+                        <label class="col-sm-2 col-form-label">Đơn vị tính</label>
 
-                        <div class="col-sm-10"><input type="text" class="form-control" asp-for="address"></div>
+                        <div class="col-sm-10"><input type="text" class="form-control" asp-for="unit"></div>
+                    </div>
+
+                    <div class="hr-line-dashed"></div>
+                    <div class="form-group row">
+                        <label class="col-sm-2 col-form-label">Số lượng</label>
+
+                        <div class="col-sm-10"><input type="number" min="0" class="form-control" asp-for="amount"></div>
                     </div>
                     <div class="hr-line-dashed"></div>
 
@@ -67,6 +74,7 @@
                             <button class="btn btn-primary btn-sm" type="submit">Lưu thay đổi</button>
                         </div>
                     </div>
+
                 </form>
             </div>
         </div>
@@ -75,10 +83,12 @@
 
 <!-- iCheck -->
 <script src="js/plugins/iCheck/icheck.min.js"></script>
-<script>$(document).ready(function () {
+<script>
+$(document).ready(function () {
                 $('.i-checks').iCheck({
                     checkboxClass: 'icheckbox_square-green',
                     radioClass: 'iradio_square-green',
                 });
             });</script>
+
 
