--- a/WebApp/Views/Product/Delete.cshtml
+++ b/WebApp/Views/Product/Delete.cshtml
@@ -63,7 +63,7 @@
                                         @Html.DisplayFor(modelItem => Model.amount)
                                     </td>
                                     <td>
-                                        @Html.DisplayFor(modelItem => Model.price)
+                                        @Html.DisplayFor(modelItem => Model.priceIm)
                                     </td>
                                     <td>
                                         @Html.DisplayFor(modelItem => Model.unit)
