--- a/WebApp/Views/Product/Create.cshtml
+++ b/WebApp/Views/Product/Create.cshtml
@@ -29,8 +29,8 @@
                                     <div class="form-group row">
                                         <label class="col-sm-2 col-form-label">Đơn giá:</label>
                                         <div class="col-sm-10">
-                                            <input asp-for="price" type="number" min="1" class="form-control" />
-                                            <span asp-validation-for="price" class="text-danger"></span>
+                                            <input asp-for="priceIm" type="number" min="1" class="form-control" />
+                                            <span asp-validation-for="priceIm" class="text-danger"></span>
                                         </div>
                                     </div>
                                     <div class="form-group row">
