--- a/WebApp/Views/Product/Index.cshtml
+++ b/WebApp/Views/Product/Index.cshtml
@@ -28,7 +28,6 @@
         </div>
 
     </div>
-
     <div class="row">
         <div class="col-lg-12">
             <div class="ibox">
@@ -63,7 +62,7 @@
                                         @Html.DisplayFor(modelItem => item.amount)
                                     </td>
                                     <td>
-                                        @Html.DisplayFor(modelItem => item.price)
+                                        @Html.DisplayFor(modelItem => item.priceIm)
                                     </td>
                                     <td>
                                         @Html.DisplayFor(modelItem => item.unit)
@@ -94,5 +93,5 @@
 
         $('.footable').footable();
 
-                            });</script>
+    });</script>
 
